--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -197,6 +197,13 @@ Modify at your own peril, a broken website is the likely result.
 </script>
 
 <div id="ProductSection-{{ section.id }}" data-section-id="{{ section.id }}" data-section-type="product-template" data-related-enabled="{{ section.settings.product_related_enable }}" data-social-sharing="{{ section.settings.social_sharing }}" data-show-compare-at-price="false" data-stock="false" data-incoming-transfer="false" data-ajax-cart-method="{{ settings.ajax_cart_method }}">
+
+  {% if section.settings.title != blank %}
+    <div class="section-header">
+      <h2 class="section-header--left h2">{{ section.settings.title | escape }}</h2>
+    </div>
+  {% endif %}
+
 {% include 'breadcrumb' %}
 
 <hr>
@@ -524,6 +531,12 @@ Modify at your own peril, a broken website is the likely result.
   },
   "class": "product-template-section",
   "settings": [
+    {
+      "type": "text",
+      "id": "title",
+      "label": "Heading",
+      "default": "Featured Product"
+    },
     {
       "type": "product",
       "id": "featured_product",
