--- a/snippets/mobile-nav.liquid
+++ b/snippets/mobile-nav.liquid
@@ -90,19 +90,7 @@
         {% comment %} Mobile Rental Dropdown {% endcomment %}
         {% assign rental_collection_count = 0 %}
         {% for collection in collections %}
-          {% assign is_rental_collection = false %}
-          {% if collection.metafields.newmediaretailer.for_app == 'rental' %}
-            {% assign is_rental_collection = true %}
-          {% else %}
-            {% for product in collection.products limit: 1 %}
-              {% if product.tags contains 'Rental' %}
-                {% assign is_rental_collection = true %}
-                {% break %}
-              {% endif %}
-            {% endfor %}
-          {% endif %}
-          
-          {% if is_rental_collection and collection.title != 'Rentals' and collection.all_products_count > 0 %}
+          {% if collection.metafields.newmediaretailer.for_app == 'rental' and collection.title != 'Rentals' and collection.all_products_count > 0 %}
             {% assign rental_collection_count = rental_collection_count | plus: 1 %}
           {% endif %}
         {% endfor %}
@@ -133,19 +121,7 @@
               </li>
             {% endif %}
             {% for collection in collections %}
-              {% assign is_rental_collection = false %}
-              {% if collection.metafields.newmediaretailer.for_app == 'rental' %}
-                {% assign is_rental_collection = true %}
-              {% else %}
-                {% for product in collection.products limit: 1 %}
-                  {% if product.tags contains 'Rental' %}
-                    {% assign is_rental_collection = true %}
-                    {% break %}
-                  {% endif %}
-                {% endfor %}
-              {% endif %}
-              
-              {% if is_rental_collection and collection.title != 'Rentals' and collection.all_products_count > 0 %}
+              {% if collection.metafields.newmediaretailer.for_app == 'rental' and collection.title != 'Rentals' and collection.all_products_count > 0 %}
                 <li{% if collection.url == request.page_type %} class="mobile-nav--active"{% endif %}>
                   <a
                     href="{{ collection.url }}"
