--- a/sections/featured-product.liquid
+++ b/sections/featured-product.liquid
@@ -25,12 +25,6 @@ Modify at your own peril, a broken website is the likely result.
   {%- assign price = variant.price -%}
 {%- endif -%}
 
-<!-- Product media wrapper -->
-{% for media in product.media %}
-    {% assign first_media_id = product.media.first.id %}
-{% endfor %}
-<div x-data="{ selectedId: {{ first_media_id }} }">
-
 {% if section.settings.product_quantity_enable == false %}
   <style>
     .selector-wrapper select, .product-variants select {
@@ -38,48 +32,6 @@ Modify at your own peril, a broken website is the likely result.
     }
   </style>
 {% endif %}
-
-<!-- Featured Product Specific Styling for Image Wrapper -->
-<style>
-  #ProductSection-{{ section.id }} .product__image-wrapper img {
-    position: relative!important;
-    max-height: 100%!important;
-    width:initial!important;
-  }
-  #ProductSection-{{ section.id }} .product__image-wrapper {
-    overflow:initial!important;
-    margin-bottom:20px!important;
-    border:1px solid #eaeaea;
-    border-radius:5px;
-    padding:20px;
-  }
-  #ProductSection-{{ section.id }} .product__image-wrapper img {
-    max-height: 400px !important;
-  }
-  #ProductSection-{{ section.id }} .product-video-overlay {
-    position: absolute;
-    bottom: 0;
-    top: 0;
-    background: rgb(0, 0, 0);
-    background: rgba(0, 0, 0, 0.5);
-    color: #f1f1f1;
-    width: 100%;
-    height: 100%;
-    transition: .5s ease;
-    color: white;
-    font-size: 20px;
-    display: flex;
-    text-align: center;
-    align-items: center;
-    justify-content: center;
-  }
-  #ProductSection-{{ section.id }} .product-video-overlay svg {
-    width:50px;
-    height:50px;
-    background: rgba(256,256,256,.5);
-    border-radius: 100%;
-  }
-</style>
 
 
 <script>
@@ -161,23 +113,52 @@ Modify at your own peril, a broken website is the likely result.
   <meta itemprop="url" content="{{ shop.url }}{{ product.url }}">
   <meta itemprop="image" content="{{ product.featured_image.src | img_url: 'grande' }}">
 
-  <div class="grid-item large--one-half">
+  <div class="grid-item large--two-fifths">
     <div class="grid">
       <div class="grid-item large--eleven-twelfths text-center">
-        {% if product.media.size > 0 and section_onboarding == false %}
-          {% include 'product-image-selector' %}
-        {% elsif section_onboarding %}
-          {{ 'product-1' | placeholder_svg_tag: 'placeholder-svg' }}
-        {% else %}
-          <div class="no-product-image-available-rental">
-            <p>No Image Available</p>
-          </div>
-        {% endif %}
+        <div class="product-photo-container" id="productPhotoContainer-{{ section.id }}">
+          {% unless section_onboarding %}
+            {% assign featured_image = product.selected_or_first_available_variant.featured_image | default: product.featured_image %}
+            {% for image in product.images %}
+              {%- capture img_wrapper_id -%}productPhotoWrapper-{{ section.id }}-{{ image.id }}{%- endcapture -%}
+              {%- assign max_width = 690 -%}
+              {%- assign max_height = 1000 -%}
+
+              {%- include 'image-logic' with width: max_width, height: max_height -%}
+
+              {%- assign img_url = image | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
+              <div id="{{ img_wrapper_id }}" class="lazyload__image-wrapper{% unless image == featured_image %} hide{% endunless %}" data-image-id="{{ image.id }}" style="max-width: {{ max_width }}px">
+                <div class="no-js product__image-wrapper" style="padding-top:{{ 1 | divided_by: image.aspect_ratio | times: 100}}%;">
+                    <img id="{{ img_id }}"
+                      {% if forloop.first == true %}
+                      src="{{ featured_image | img_url: '300x300' }}"
+                      {% endif %}
+                      class="lazyload no-js lazypreload"
+                      data-src="{{ img_url }}"
+                      data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
+                      data-aspectratio="{{ image.aspect_ratio }}"
+                      data-sizes="auto"
+                      alt="{{ image.alt | escape }}"
+>
+                </div>
+              </div>
+              {% if forloop.first == true %}
+                <noscript>
+                  <img src="{{ image | img_url: '580x' }}"
+                    srcset="{{ image | img_url: '580x' }} 1x, {{ image | img_url: '580x', scale: 2 }} 2x"
+                    alt="{{ image.alt }}" style="opacity:1;">
+                </noscript>
+              {% endif %}
+          {% endfor %}
+          {% else %}
+            {{ 'product-1' | placeholder_svg_tag: 'placeholder-svg' }}
+          {% endunless %}
+        </div>
       </div>
     </div>
   </div>
 
-  <div class="grid-item large--one-half">
+  <div class="grid-item large--three-fifths">
 
     <h1 class="h2" itemprop="name">{{ title }}</h1>
 
@@ -427,7 +408,6 @@ Modify at your own peril, a broken website is the likely result.
     {{ product | json }}
   </script>
 {% endunless %}
-</div><!-- Close product media wrapper -->
 </div>
 
 
